--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,56 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  max-width: 90vw;
+  margin: 0 auto;
+  margin-top: 90px;
+}
+
+.placeholderNavbar {
+  background-color:aquamarine;
+  height:60px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
+}
+
+.navbarContainer {
+  background-color:aquamarine;
+  padding: 10px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.navbar {
+  max-width: 90vw;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content:flex-start;
   align-items: center;
+}
+
+.detailsContainer {
+  max-width:1050px;
+  background: #f7f7f7;
+  padding: 15px 45px;
+  margin: 0 auto;
+}
+
+.navbar > * {
+  margin-right:35px;
+}
+
+.cardImage {
+  transition: .2s ease all;
+}
+
+.cardImage:hover {
+  transform: scale(1.05);
 }
 
 .title a {
